src/layouts/index.css
@import 'normalize.css';
@import 'basscss';

@import './root.css';

html {
  box-sizing: border-box;
  font-family: sans-serif;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

::selection {
  background-color: rgba(255, 241, 124, 0.99);
  color: black;
  opacity: 1;
}

body {
  font-family: Roboto, var(--font-family-sans-serif);
  background-color: black;
  color: white;
}

h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
  margin-bottom: .5rem;
}

h1, h2 {
  letter-spacing: 1px;
  font-weight: 500;
}

h1 {
  margin-bottom: 1rem;
}

p {
  margin-top: 0;
  margin-bottom: 1rem;
  line-height: 1.2;
}

.svg-filters {
  position: absolute;
  visibility: hidden;
  width: 1px;
  height: 1px;
}

.main-container {}

.container {
  max-width: calc(1140px + 3rem);
  margin: 0 auto;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

